<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>observation_lib</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lourenco@todo.todo"></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eufs_msgs</depend>
  <depend>fs_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_interfaces</depend>
  <depend>common_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
